# ftl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test_debug.yml
cmake/: FetchGoogleTest.cmake
include/ftl/: core.hpp
include/ftl/containers/: vector.hpp
include/ftl/internal/: compressed_pair.hpp  config.hpp  enable_if_input_iterator.hpp  exception_guard.hpp  wrap_iterator.hpp
src/tests/: CMakeLists.txt  vector_test.cpp
tests/: CMakeLists.txt  vector_test.cpp
